# todo-cli

./: .gitignore  README.md  pyproject.toml
tests/: test_database.py
todo_cli/: __init__.py  __main__.py  cli.py  database.py  models.py
